--- a/style.css
+++ b/style.css
@@ -29,3 +29,23 @@ body {
     outline: none;
     padding: 5px;
 }
+
+
+@media screen and (min-width: 1440px) {
+    .settings {
+        top: 100px;
+        right: 150px;
+        transform: scale(1.4);
+    }
+}
+
+@media screen and (max-width: 850px) {
+    body {
+        overflow: unset;
+    }
+
+    .settings {
+        position: unset;
+        padding: 0 5%;
+    }
+}
